--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@types/node-rsa": "^1.1.4",
     "axios": "^1.6.5",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.314.0",
+    "node-rsa": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "tailwind-variants": "^0.1.20",
+    "vite-plugin-node-polyfills": "^0.19.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
